# VPSFANZ-Agent

./: README.md  cli.py  config.yaml  pyproject.toml  pytest.ini
ip-vps-demo/: .env  cli.py  hunter_tool.py  orchestrator.py  pyproject.toml  setup.py  threatbook_tool.py  whois_tool.py
src/osint_agent/: cli.py
src/osint_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/osint_agent/dispatcher/: config.py  llm.py  logging.py  loop.py  prompting.py  tasks.py
src/osint_agent/dispatcher/prompts/: bootstrap.md  explore.md  reason.md
src/osint_agent/graph/: export.py  models.py  store.py
src/osint_agent/server/: app.py  dependencies.py  events.py  routes.py
src/osint_agent/server/static/: app.js  index.html  style.css
src/osint_agent/tools/: __init__.py  registry.py  search_scraper.py  web_search.py
